fix: understand the vertical overflow issue and correct it

--- a/styles.css
+++ b/styles.css
@@ -16,13 +16,7 @@ html {
 }
 
 body {
-    height: 100%;
-    width: 100%;
     margin: 0;
-}
-
-.outer {
-    height: max-content;
     min-height: 100%;
     display: flex;
     align-items: center;
